--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,13 @@ url: "https://tsaoyuan.github.io" # the base hostname & protocol for your site, 
 github_username:  tsaoyuan
 
 # Build settings
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes@4.24.0
 minimal_mistakes_skin: "dark"
 
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
